Container/Kubernetes/k3s-soniiit/Authentik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`authentik.home.soniiit.net`)
      kind: Rule
      services:
        - name: authentik-server
          port: 443
  tls:
    secretName: home-soniiit-net-selfsigned-tls
